--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="col-10 detail">      
         
         <h3>Hi, I'm Keerti Chaudhary.</h2><br>
-        <h2>A Developer.</h2>
-        <h4>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving challenging real-world problems.</h4>
+        <h2>An aspiring programmer.</h2>
+        <h4>Self-driven, quick starter, passionate with a curious mind who enjoys solving challenging real-world problems.</h4>
       
     </div> 
     </div>
