add email address

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           </span>Projects</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" style="color:white" href="#resume"><span class="material-icons">
+            dns
+          </span>Resume</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" style="color:white" href="#contactme"><span class="material-icons">
             contact_mail
           </span>Contact Me</a>
@@ -159,8 +164,8 @@
 
               <ul class="list-inline">
                 <li class="list-inline-list"><a target="blank" style="color:black"
-                    href="mailto: 17keerti@gmail.com"><span class="iconify"
-                      data-icon="carbon:email-new"></span>Email</a>
+                    href="mailto: 17keerti@gmail.com"><span class="iconify" data-icon="carbon:email-new"></span>Email-
+                    17keerti@gmail.com</a>
                 </li>
                 <li class="list-inline-list"><a target="blank" style="color:black"
                     href="https://www.linkedin.com/in/keerti-chaudhary-25331791/"><span class="iconify"
