--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           </span>Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style="color:white" href="#resume"><span class="material-icons">
+        <a class="nav-link" style="color:white" href="#skills"><span class="material-icons">
             dns
-          </span>Resume</a>
+          </span>Skills</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" style="color:white" href="#contactme"><span class="material-icons">
@@ -62,7 +62,7 @@
         <p>
           I am a Computer Science Student. I enjoy problem-solving and i have a great passion for coding and
           development. Always striving to bring 100% to the work I do. I have worked on technologies like HTML5, CSS,
-          JavaScript, jQuery.
+          JavaScript, jQuery, React, Node, MongoDB, MySQL, Python.
         </p>
       </div>
     </div>
@@ -153,6 +153,20 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-10 display">
+          <h2 id="skills">Skills</h2>
+
+          <li>Javascript</li>
+          <li>React</li>
+          <li>Node.js</li>
+          <li>Python</li>
+          <li>MYSQL</li>
+          <li>MongoDB</li>
+
         </div>
       </div>
 
