Add two new projects

--- a/index.html
+++ b/index.html
@@ -89,15 +89,17 @@
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="./assets/images/tennis.png" class="card-img-top" alt="Calender">
+                  <img src="./assets/images/sentiment analysis.png" class="card-img-top" alt="Calender">
                   <div class="card-body">
-                    <h5 class="card-title">Whos There</h5>
-                    <p class="card-text">This application allows tennis players to find an empty tennis courtquick.
-                      Users can book a slot for themselves after logging in and they can also log out after they are
-                      done playing.</p>
-                    <a href="https://whos-there-kkc.herokuapp.com/" target="_blank" class="btn btn-primary">Link to
+                    <h5 class="card-title">Twitter Sentiment Analysis</h5>
+                    <p class="card-text">Twitter sentiment analysis done to analyse sentiments of people on guns and gun
+                      control setiments near and around 2022 US
+                      Midterm election using Natural Language Processing and supervised Machine Learning.</p>
+                    <a href="https://public.tableau.com/app/profile/dana.o.burton/viz/Sentiment_Analysis_Tableau_Workbook/Dashboard1"
+                      target="_blank" class="btn btn-primary">Link to
                       website</a>
-                    <a href="https://github.com/17keerti/whos-there" target="_blank" class="btn btn-primary">Link to
+                    <a href="https://github.com/17keerti/sentiment_analysis_fproject" target="_blank"
+                      class="btn btn-primary">Link to
                       Github</a>
                   </div>
                 </div>
@@ -121,21 +123,6 @@
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="./assets/images/vacation.png" class="card-img-top" alt="password generator">
-                  <div class="card-body">
-                    <h5 class="card-title">Vacation Awaits</h5>
-                    <p class="card-text">This app creates a travel webpage that lets user get ideas for any fun day
-                      trips.</p>
-                    <a href="https://vacation-awaits.herokuapp.com/" target="_blank" class="btn btn-primary">Link
-                      to
-                      website</a>
-                    <a href="https://github.com/17keerti/vacation-awaits" target="_blank" class="btn btn-primary">Link
-                      to Github</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
                   <img src="./assets/images/password generator.png" class="card-img-top" alt="password generator">
                   <div class="card-body">
                     <h5 class="card-title">Password Generator</h5>
@@ -147,6 +134,23 @@
                       website</a>
                     <a href="https://github.com/17keerti/password-generator-29thmarch" target="_blank"
                       class="btn btn-primary">Link to
+                      Github</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="./assets/images/bikesharing.png" class="card-img-top" alt="weather dashboard">
+                  <div class="card-body">
+                    <h5 class="card-title">Bike Sharing Analysis</h5>
+                    <p class="card-text">Analysing and Visualising the Citi Bike data in New York city baesd on checkout
+                      time by user, tripr by gender, peak hours, top starting and ending locations.
+                    </p>
+                    <a href="https://public.tableau.com/app/profile/keerti7577/viz/bikesharing_challenge_16636319384400/NYCCityBikeData?publish=yes"
+                      target="_blank" class="btn btn-primary">Link
+                      to website</a>
+                    <a href="https://github.com/17keerti/bikesharing" target="_blank" class="btn btn-primary">Link
+                      to
                       Github</a>
                   </div>
                 </div>
