Add nre project Employee Tracker

--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
                   </div>
                 </div>
               </div>
+              <div class="col">
+                <div class="card h-100">
+                  <img src="./assets/images/employee tracker.png" class="card-img-top" alt="Calender">
+                  <div class="card-body">
+                    <h5 class="card-title">Employee Tracker</h5>
+                    <p class="card-text">A command-line application to manage company's employee database using Node.js,
+                      Inquirer, and MySQL.The application links to an SQL database and allows users to view and manage
+                      employee records from the command line interface.</p>
+                    <a href="https://github.com/17keerti/employee-tracker" target="_blank" class="btn btn-primary">Link
+                      to
+                      Github</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
