--- a/index.html
+++ b/index.html
@@ -177,14 +177,20 @@
       <div class="row">
         <div class="col-10 display">
           <h2 id="skills">Skills</h2>
-
           <li>Javascript</li>
           <li>React</li>
           <li>Node.js</li>
           <li>Python</li>
           <li>MYSQL</li>
+          <li>Python</li>
           <li>MongoDB</li>
-
+          <li>GraphQL</li>
+          <li>Tableau</li>
+          <li>MATLAB</li>
+          <li>Machine Learning</li>
+          <li>Excel</li>
+          <li>SQL</li>
+          <li>Statistics and R</li>
         </div>
       </div>
 
