--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <hr class="divider my-4" />
                 <p class="text-muted mb-5">Languages: Python | JavaScript | HTML | CSS | SQL</p>
                 <p class="text-muted mb-5">Databases: PostgreSQL | MySQL | MongoDB</p>
-                <p class="text-muted mb-5">Other Technologies: AWS | Jupyter Notebook | GraphQL | Tableau | Github | API interactions | Bootstrap | Tableau</p>
+                <p class="text-muted mb-5">Other Technologies: AWS | Jupyter Notebook | GraphQL | Tableau | Github | API interactions | Bootstrap</p>
                 <p class="text-muted mb-5">Industry Knowledge: Software Engineering Algorithms | Data Structures </p>
             </div>
         </section>
