--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
                         <i class="fas fa-4x fa-book text-primary mb-4"></i>
                         <a class = "d-block" href="https://github.com/17keerti/book-search-engine" target="_blank">Book Search Engine</a>
                         <p class="text-muted mb-0">Developed a blog-style website utilizing MVC structure where authenticated users can publish their posts and comment on other user’s posts.</p>
-                        <a class = "d-block" href="https://17keerti.github.io/Weather-Dashboard/" target="_blank">Website</a>
                     </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
@@ -108,7 +107,7 @@
                             <i class="fas fa-4x fa-key text-primary mb-4"></i>
                             <a class = "d-block" href="https://github.com/17keerti/password-generator-29thmarch" target="_blank">Password Generator</a>
                             <p class="text-muted mb-0">This generates a random password based on user-selected criteria. It gives several prompts to users to select options. Once all prompts are answered, the user will be given a password of their choice.</p>
-                            <a class = "d-block" href="https://17keerti.github.io/password-generator-29thmarch/" target="_blank">Weather Dashboard</a>
+                            <a class = "d-block" href="https://17keerti.github.io/password-generator-29thmarch/" target="_blank">Website</a>
 
                         </div>
                     </div>
